Backend refactor